  * ppp, slip: Validate VJ compression slot parameters completely
    (CVE-2015-7799)
  * Btrfs: fix truncation of compressed and inlined extents (CVE-2015-8374)
  * netfilter: Enable NFT_DUP_IPV4, NFT_DUP_IPV6 as modules (Closes: #803370)
  * [x86] Enable PINCTRL_BAYTRAIL (Closes: #797949)
  * qxl: Enable by default (Closes: #779515)
  * [s390*] Update linux-compiler metapackage to gcc-4.9

 -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 10 Nov 2015 22:05:58 +0100

linux (4.2.6-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.2.6
    - mmc: core: Fix init_card in 52Mhz (regression in 4.2)
    - rtlwifi: rtl8821ae: Fix system lockups on boot (regression in 4.2)
    - iwlwifi: mvm: init card correctly on ctkill exit check
      (regression in 3.18)
    - iwlwifi: mvm: flush fw_dump_wk when mvm fails to start
      (regression in 3.18)
    - [x86] iommu/vt-d: fix range computation when making room for large pages
    - [x86] iommu/amd: Fix BUG when faulting a PROT_NONE VMA
    - [x86] iommu/amd: Don't clear DTE flags when modifying it
    - drm: fix mutex leak in drm_dp_get_mst_branch_device
    - drm: Correct arguments to list_tail_add in create blob ioctl
    - drm: crtc: integer overflow in drm_property_create_blob()
    - rtl28xxu: fix control message flaws (regression in 4.0)
    - ALSA: hda - Fix deadlock at error in building PCM
    - [x86] ioapic: Prevent NULL pointer dereference in setup_ioapic_dest()
      (regression in 4.2.4)
    - mm: make sendfile(2) killable
    - drm/radeon/dpm: don't add pwm attributes if DPM is disabled
      (regression in 4.0)
    - [x86] drm/i915: Restore lost DPLL register write on gen2-4
      (regression in 3.18)
    - [x86] drm/i915: Deny wrapping an userptr into a framebuffer
    - drm/radeon: don't try to recreate sysfs entries on resume
      (regression in 4.2.5)
    - drm/radeon: fix dpms when driver backlight control is disabled