@@ -23,13 +23,11 @@ format to detect missing firmware.
 ---
 --- a/drivers/base/firmware_class.c
 +++ b/drivers/base/firmware_class.c
-@@ -340,17 +340,20 @@ static int fw_get_filesystem_firmware(st
- 		}
+@@ -340,16 +340,19 @@ static int fw_get_filesystem_firmware(st
  		rc = fw_read_file_contents(file, buf);
  		fput(file);
--		if (rc)
+ 		if (rc)
 -			dev_warn(device, "firmware, attempted to load %s, but failed with error %d\n",
-+		if (!rc)
 +			dev_dbg(device, "firmware, attempted to load %s, but failed with error %d\n",
  				path, rc);
  		else
